--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
@@ -8,9 +9,10 @@ body {
     font-family: 'Outfit', sans-serif;
     margin: 0 auto;
 }
-main {
-    margin: 200px auto;
+.conteiner {
+    margin: 200px 40vw;
     display: flex;
+    flex-wrap: wrap;
     width: 300px;
     height: 460px;
     background-color: hsl(0, 0%, 100%);
@@ -38,4 +40,45 @@ p {
 }
 .attribution {
     text-align: center;
+}
+@media (max-width: 400px) {
+    body {
+        width: 375px;
+        background-color: hsl(212, 45%, 89%);
+        font-family: 'Outfit', sans-serif;
+        margin: 0 auto;
+    }
+    .conteiner {
+        margin: 200px 40vw;
+        display: flex;
+        flex-wrap: wrap;
+        width: 150px;
+        height: 230px;
+        background-color: hsl(0, 0%, 100%);
+        border-radius: 20px;
+    }
+    img {
+        width: 90%;
+        display: block;
+        margin: 8px auto;
+        border-radius: 10px;
+    }
+    h1 {
+        font-weight: 700;
+        font-size: 9px;
+        text-align: center;
+        color: hsl(218, 44%, 22%);
+        padding: 0 20px;
+    }
+    p {
+        font-weight: 400;
+        font-size: 6px;;
+        text-align: center;
+        padding: 2px 27px;
+        color: hsl(220, 15%, 55%);
+    }
+    .attribution {
+        text-align: center;
+        font-size: 8px;
+    }
 }
